kubernetes/apps/uptime-kuma/manifest/templates/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    goldilocks.fairwinds.com/enabled: "true"
