kubernetes/apps/uptime-kuma/manifest/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001 # Handled by Talos/Kubelet, not the container
        fsGroupChangePolicy: "Always"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.0.2-slim-rootless
          securityContext:
            # Add this specific line to override the image default
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uptime-kuma-data
              mountPath: /app/data
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
      volumes:
        - name: uptime-kuma-data
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
