kubernetes/apps/uptime-kuma/manifest/templates/ingress.yaml
# test example -> curl -v https://whoami.yuriy-lab.cloud --resolve whoami.yuriy-lab.cloud:443:192.168.0.XXX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    "nginx.ingress.kubernetes.io/auth-url": "http://ak-outpost-proxy.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    "nginx.ingress.kubernetes.io/auth-signin": "https://authentik.yuriy-lab.cloud/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri"
    "nginx.ingress.kubernetes.io/auth-response-headers": "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    "nginx.ingress.kubernetes.io/auth-snippet": "proxy_set_header X-Forwarded-Host $http_host;"
spec:
  ingressClassName: nginx # This specifies that NGINX should handle the Ingress
  tls:
  - hosts:
    - kuma.yuriy-lab.cloud
    secretName: kuma-tls
  rules:
    - host: kuma.yuriy-lab.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
